INFENG-743: Remove Helm chart bumpversion
Update Chart.yaml version strings to dummy values: 0.0.0, and instead
pass VERSION in through --version and --app-version flags during helm
package in helm/Makefile.

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -3,7 +3,7 @@ export VERSION:=$(shell ../version.sh)
 build/stamp: $(shell find charts -type f)
 	mkdir -p build
 	rm -rf build/*.tgz
-	helm package --destination build charts/determined
+	helm package --destination build charts/determined --version $(VERSION) --app-version $(VERSION)
 	cd build/ && ln -s determined-*.tgz determined-latest.tgz && cd ..
 	touch $@
 
