--- a/helm/charts/determined/Chart.yaml
+++ b/helm/charts/determined/Chart.yaml
@@ -1,12 +1,19 @@
 apiVersion: v1
 name: determined
 description: A Helm chart for Determined
-version: "0.32.1-dev0"
+
+# This is a dummy value. The actual version string is passed through the
+# --version flag during helm package.
+version: "0.0.0"
+
 icon: https://github.com/determined-ai/determined/blob/main/determined-logo.svg?raw=true
 home: https://github.com/determined-ai/determined.git
 
 # appVersion controls the version HPE MLDE / Determined OSS that is deployed.
 # If using a non-release version (e.g., X.Y.Z.dev0) you will have to specify an
-# existing official release version (e.g., X.Y.Z) or specify a commit has
-# that has been publicly published (all commits from main).
-appVersion: "0.32.1-dev0"
+# existing official release version (e.g., X.Y.Z) or specify a commit that has
+# been publicly published (all commits from main).
+#
+# This is a dummy value. The actual version string is passed through the
+# --app-version flag during helm package.
+appVersion: "0.0.0"
