--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -629,8 +629,9 @@ commands:
       - when:
           condition: 
             and:
-              - eq: [<<parameters.master-host>>,'localhost']
+              - equal: [<<parameters.master-host>>,'localhost']
               - <<parameters.wait-for-master>>
+              - not: <<parameters.managed-devcluster>>
           steps:
             - run:
                 name: Install DataDog agent
@@ -754,8 +755,9 @@ commands:
       - when:
           condition:
             and:
-              - eq: [<<parameters.master-host>>,'localhost']
+              - equal: [<<parameters.master-host>>,'localhost']
               - <<parameters.wait-for-master>>
+              - not: <<parameters.managed-devcluster>>
           steps:
             - run: # We don't know how long Circle leaves these machines running in the background. Take down the agent for safety.
                 name: Stop DataDog agent
