--- a/e2e_tests/pytest.ini
+++ b/e2e_tests/pytest.ini
@@ -16,6 +16,7 @@ markers =
     e2e_gpu: end to end GPU tests
     e2e_multi_k8s: end to end for multirm k8s
     e2e_k8s: end to end tests specific to k8s (only used in test-e2e-gke-single-cpu currently)
+    e2e_k8s_aks: end to end tests specific to k8s, run on Azure
     e2e_pbs: end to end pbs integration tests
     e2e_saml: tests for saml with okta
     e2e_slurm: end to end slurm integration tests
