Revert "change config ordering"
This reverts commit e638edd5f15ef5186bd3d023be62818ff1f69b36.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -652,18 +652,16 @@ commands:
                     sudo mkdir -p /tmp/artifacts/logs
                     sudo chmod -R a+rw /tmp/artifacts/logs
 
-                    # config files for the agent have an expected file structure
-                    sudo mkdir -p /etc/datadog-agent/conf.d/determined-master.d/
-                    sudo mkdir -p /etc/datadog-agent/
-                    sudo chmod -R a+rw /etc/datadog-agent/conf.d/determined-master.d/
-                    sudo chmod -R a+rw /etc/datadog-agent/
-                    sudo cat .circleci/datadog/ci-local-config.yaml > /etc/datadog-agent/datadog.yaml
-
                     DD_ENV="ci-${CIRCLE_JOB}" \
                     DD_HOST_TAGS="$host_tags" \
                     DD_SERVICE="determined-pytest-<<parameters.mark>>" \
                     bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script_agent7.sh)"
                     
+                    # config files for the agent have an expected file structure
+                    sudo mkdir -p /etc/datadog-agent/conf.d/determined-master.d/
+                    sudo chmod a+rw /etc/datadog-agent/datadog.yaml
+                    sudo chmod -R a+rw /etc/datadog-agent/conf.d/determined-master.d/
+                    sudo cat .circleci/datadog/ci-local-config.yaml >> /etc/datadog-agent/datadog.yaml
                     sudo sed -e "s/<SERVICE_NAME>/determined-pytest-<<parameters.mark>>/g" .circleci/datadog/e2e-log-settings.yaml > /etc/datadog-agent/conf.d/determined-master.d/conf.yaml
                     # restart agent with config
                     sudo usermod -a -G docker dd-agent
