ci: disable telemetry for ci tests

--- a/.circleci/devcluster/multi-k8s.devcluster.yaml
+++ b/.circleci/devcluster/multi-k8s.devcluster.yaml
@@ -26,6 +26,8 @@ stages:
           level: debug
         enable_cors: true
         root: tools/build
+        telemetry:
+          enabled: false
 
         resource_manager:
           type: kubernetes
