--- a/.circleci/devcluster/oauth.devcluster.yaml
+++ b/.circleci/devcluster/oauth.devcluster.yaml
@@ -29,6 +29,8 @@ stages:
           initial_user_password: $INITIAL_USER_PASSWORD
           authz:
             rbac_ui_enabled: true
+        telemetry:
+          enabled: false
 
   - agent:
       name: agent1
