--- a/.circleci/devcluster/priority.devcluster.yaml
+++ b/.circleci/devcluster/priority.devcluster.yaml
@@ -34,6 +34,8 @@ stages:
         cache: 
           cache_dir: /tmp/determined-cache
         launch_error: false
+        telemetry:
+          enabled: false
         resource_manager:
           default_aux_resource_pool: default
           default_compute_resource_pool: default
