--- a/.circleci/devcluster/single-rbac.devcluster.yaml
+++ b/.circleci/devcluster/single-rbac.devcluster.yaml
@@ -33,6 +33,8 @@ stages:
             type: basic
             username: determined
             password: password
+        telemetry:
+          enabled: false
 
   - custom:
       name: proxy
