--- a/.circleci/devcluster/perftest.devcluster.yaml
+++ b/.circleci/devcluster/perftest.devcluster.yaml
@@ -20,6 +20,8 @@ stages:
         cache:
           cache_dir: /tmp/determined-cache
         launch_error: false
+        telemetry:
+          enabled: false
         security:
           initial_user_password: $INITIAL_USER_PASSWORD
           authz:
