fix: fix HF trainer examples and e2e test

--- a/examples/hf_trainer_api/hf_language_modeling/distributed.yaml
+++ b/examples/hf_trainer_api/hf_language_modeling/distributed.yaml
@@ -23,7 +23,7 @@ entrypoint: >-
   --dataset_config_name wikitext-2-raw-v1
   --do_train
   --do_eval
-  --num_train_epochs 5
+  --max_steps 100
   --logging_strategy steps
   --logging_steps 10
   --output_dir /tmp/test-clm
