chore: add new mark to pytest.ini & tests/conftest.py

--- a/e2e_tests/pytest.ini
+++ b/e2e_tests/pytest.ini
@@ -15,6 +15,7 @@ markers =
     e2e_cpu_agent_connection_loss: end to end CPU tests for testing agent functionality on connection loss
     e2e_gpu: end to end GPU tests
     e2e_multi_k8s: end to end for multirm k8s
+    e2e_single_k8s: end to end for single k8s
     e2e_k8s: end to end tests specific to k8s (only used in test-e2e-gke-single-cpu currently)
     e2e_pbs: end to end pbs integration tests
     e2e_saml: tests for saml with okta
