* Test CircleCI tag filters.
* Set det-version parameter dynamically by updating params file as part
  of dynamic CircleCI config.

* Update test-cli CircleCI job to use python -m build instead of
  invoking setup.py directly, as that has been deprecated by setuptools.

* Update version resolution logic in harness/__init__.py to return
  0.0.0+unknown as the version string if importlib.metadata.version()
  returns a falsy value, or if using version() raises an exception,
  which happens when something is importing the determined module
  directly from source and not as part of a wheel. So far, this seems to
  only be relevant for pytest, but I'll keep an eye out to see if this
  version number is actually important somewhere. Normally, though,
  __version__ can comfortably return the metadata version, as determined
  will be running as a Python distribution with package metadata.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,20 @@ all-filters: &all-filters
       - /.*/
   tags:
     only:
+      # Matches:
+      # - v1.2.3
+      # - v1.2.3+a1b2c3
+      - /v\d+\.\d+\.\d+(\+[1-9a-f]+)?/
+
+branch-filter: &branch-filter
+  branches:
+    only:
       - /.*/
+
+tag-filter: &tag-filter
+  tags:
+    only:
+      - /v\d+\.\d+\.\d+(\+[1-9a-f]+)?/
 
 workflows:
   determined_ai:
@@ -86,6 +99,14 @@ jobs:
               jq '. += {"do_nightly_tests": true}' < "<<pipeline.parameters.params_basename>>" > tmpfile
               mv -v tmpfile "<<pipeline.parameters.params_basename>>"
             fi
+
+      - run:
+          name: Set det-version parameter.
+          command: |
+            VERSION=$(./version.sh)
+            jq --arg version "${VERSION}" '. += {"det-version": $version}' < "<<pipeline.parameters.params_basename>>" > tmpfile
+            mv -v tmpfile "<<pipeline.parameters.params_basename>>"
+            cat "<<pipeline.parameters.params_basename>>"
 
       # this must be last; persist the file to the workspace
       - persist_to_workspace:
